# ragkernel

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  cliff.toml  install.sh  pyproject.toml  release.yaml
.claude/: launch.json
.github/workflows/: release.yml
config/: settings.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md  acknowledgments.md  cad.md  capabilities.md  cli.md  configuration.md  design-principles.md  diagnostics.md  installation.md  releasing.md  updates.md  web-ui.md
docs/architecture/: document-lifecycle.md  overview.md
docs/schemas/: manifest-v1.json
eval/: qa.jsonl
eval/corpus/: AX-100接插件定义.md  BX-200接插件定义.md  SV660-伺服驱动器维修手册.md  员工手册.md  工程标注与相似码示例.md
ragkernel/: __init__.py  agent.py  audit.py  auth.py  backends.py  bootstrap.py  capabilities.py  chunking.py  cli.py  config.py  convos.py  doctor.py  embed.py  models.py  pipeline.py  rerank.py  search.py  store.py  tools.py  update.py  watch.py  webapp.py
ragkernel/cad/: __init__.py  base.py  limits.py  mesh_backend.py  normalize.py  step_backend.py  summarize.py
ragkernel/checks/: __init__.py  models.py  provider.py  runtime.py  storage.py  update.py
ragkernel/connectors/: __init__.py  base.py  cad.py  docx.py  layout.py  markdown.py  pdf.py  richdoc.py  table.py  text.py
ragkernel/diagnostics/: __init__.py  runner.py  schema.py
ragkernel/mcp/: __init__.py  http.py  server.py  verify.py
ragkernel/static/: admin.html  i18n.js  index.html
ragkernel/verticals/: __init__.py  base.py  equipment.py
releases/: stable.json
scripts/: cad_benchmark.py  eval_retrieval.py  gen_cad_fixtures.py  gen_manifest.py  smoke_test.py
tests/: conftest.py  test_bootstrap.py  test_cad_retrieval_qa.py  test_cad_step.py  test_cad_stl.py  test_conversations_api.py  test_convos.py  test_diagnostics.py  test_doctor.py  test_documents_api.py  test_mcp_archive.py  test_models.py  test_ownership.py  test_provider_checks.py  test_search_security.py  test_store_lifecycle.py  test_update.py  test_versioning.py
tests/fixtures/cad/: assembly_named_colored.step  bad_winding.stl  box.step  box_10x20x30.stl  box_10x20x30_ascii.stl  box_open.stl  box_variant.step  cylinder_hole.step  inch_box.step  malformed.step  multi_body.step  nested_rotated_assembly.step  two_bodies.stl
