[project]
name = "ragkernel"
version = "0.1.0"
description = "本地优先的企业 RAG 内核：混合检索 + 重排 + 带引用问答，傻瓜式自动索引"
requires-python = ">=3.12,<3.14"  # onnxruntime(RapidOCR 依赖)暂无 cp314 轮子，封顶避免 uv 选到 3.14 装不上
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "jieba>=0.42",
    "pyyaml>=6.0",
    "flask>=3.0",
    "pydantic>=2.0",
    "markitdown[pdf,docx,pptx]>=0.1",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "watchdog>=4.0",
    "docling>=2.113.0",
    "rapidocr-onnxruntime>=1.4.4",
    "onnxruntime>=1.20.1",
    "mcp>=1.27.2,<2",  # MCP Server（Agent 接口）；1.27.2 含 transport session↔principal 绑定安全修复，<2 避开 v2 预发布破坏性 API
]

[project.scripts]
ragkernel = "ragkernel.cli:main"

[project.optional-dependencies]
# 原生 CAD 摄取（STEP/STL）。重二进制轮子，故作可选 extra、后端内惰性导入——缺失时内核照常启动。
# STEP=OpenCASCADE(OCP) XDE；novtk 变体去掉 VTK（省 ~100MB，适合无头/离线服务端），
# 平台若无 novtk 轮子可回退 cadquery-ocp（含 VTK）。STL=trimesh(MIT，仅需 numpy)。
cad = [
    "cadquery-ocp-novtk>=7.9",  # 或 cadquery-ocp（含 VTK）作跨平台回退
    "trimesh>=4.6",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ragkernel"]
